[gd_scene load_steps=12 format=3 uid="uid://d4l5hx0qih83"]

[ext_resource type="Script" path="res://Scripts/SceneManager.gd" id="1_i1oki"]
[ext_resource type="PackedScene" uid="uid://dajxe1r77h13" path="res://Scenes/player.tscn" id="1_jcplm"]
[ext_resource type="Script" path="res://Scripts/ServerBrowser.gd" id="3_s1qlv"]
[ext_resource type="PackedScene" uid="uid://dnjo0ambgkctm" path="res://Scenes/server_info.tscn" id="4_hhcdl"]

[sub_resource type="BoxMesh" id="BoxMesh_f4a3a"]
size = Vector3(100, 1, 100)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7jh16"]
albedo_color = Color(0.490196, 0.556863, 0.662745, 1)
metallic_specular = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_nggfd"]
size = Vector3(100, 1, 100)

[sub_resource type="BoxMesh" id="BoxMesh_cg1rl"]
size = Vector3(0.485, 2.53, 4.788)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gbnl2"]
albedo_color = Color(0.129412, 0.364706, 1, 1)
metallic_specular = 1.0

[sub_resource type="BoxShape3D" id="BoxShape3D_u3515"]
size = Vector3(0.485, 2.53, 4.788)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_m0b6i"]
albedo_color = Color(0.627451, 0.584314, 0.196078, 1)
metallic_specular = 1.0

[node name="World" type="Node3D"]
script = ExtResource("1_i1oki")
PlayerScene = ExtResource("1_jcplm")

[node name="Solids" type="Node" parent="."]

[node name="Floor" type="StaticBody3D" parent="Solids"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.507187, 0)
mesh = SubResource("BoxMesh_f4a3a")
surface_material_override/0 = SubResource("StandardMaterial3D_7jh16")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_nggfd")

[node name="Wall" type="StaticBody3D" parent="Solids"]
transform = Transform3D(1, 0, 0, 0, 2.04164, 0, 0, 0, 1, 2.3813, 2.24749, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall12" type="StaticBody3D" parent="Solids"]
transform = Transform3D(0.495095, 1.77386, 0, -0.868839, 1.01081, 0, 0, 0, 1, 3.33531, 0.882562, -17.5162)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall12"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_m0b6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall12"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall15" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-2.16572e-08, -7.75192e-08, -1, -0.868631, 1.01155, 0, 0.495459, 1.77343, -4.37114e-08, 8.02249, 3.43249, -12.9398)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall15"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_m0b6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall15"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall14" type="StaticBody3D" parent="Solids"]
transform = Transform3D(0.495459, -1.77343, 0, 0.868631, 1.01155, 0, 0, 0, 1, 12.7511, 0.882562, -17.5162)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall14"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_m0b6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall14"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall13" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, -2.04164, 0, 1, -8.92429e-08, 0, 0, 0, 1, 8.05052, 2.12558, -17.5162)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall13"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_m0b6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall13"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall16" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, -2.04164, 0, 1, -8.92429e-08, 0, 0, 0, 1, 8.05052, 4.67868, -8.42349)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall16"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_m0b6i")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall16"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall2" type="StaticBody3D" parent="Solids"]
transform = Transform3D(1, 0, 0, 0, 2.04164, 0, 0, 0, 1, 2.3813, 2.24749, -6.16316)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall2"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall2"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall3" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 2.04164, 0, -1, 0, -4.37114e-08, -2.65056, 2.24749, -12.6915)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall3"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall3"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall4" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 2.04164, 0, -1, 0, -4.37114e-08, -2.65056, 2.24749, 9.90813)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall4"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall4"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall17" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 2.04164, 0, -1, 0, -4.37114e-08, -6.54891, 2.24749, 9.90813)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall17"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall17"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall5" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 2.04164, 0, -1, 0, -4.37114e-08, -2.65056, 2.24749, 18.6984)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall5"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall5"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall10" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-3.09086e-08, -1.1985e-07, 2.37402, -0.707107, 2.74186, 0, -0.707107, -2.74186, -1.03772e-07, -5.19203, 6.18961, 17.2725)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall10"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall10"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall11" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-3.09086e-08, 1.17927e-07, 2.37402, 0.707107, 2.69786, 0, -0.707107, 2.69786, -1.03772e-07, -5.19203, 6.18961, 10.6385)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall11"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall11"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall9" type="StaticBody3D" parent="Solids"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 2.04164, 0, -1, 0, -4.37114e-08, -7.38803, 2.24749, 18.6984)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall9"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall9"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall6" type="StaticBody3D" parent="Solids"]
transform = Transform3D(1, 0, 0, 0, 2.04164, 0, 0, 0, 1, -0.505735, 2.24749, 12.5313)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall6"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall6"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall8" type="StaticBody3D" parent="Solids"]
transform = Transform3D(1, 0, 0, 0, 2.04164, 0, 0, 0, 1, -8.80479, 2.24749, 11.5556)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall8"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall8"]
shape = SubResource("BoxShape3D_u3515")

[node name="Wall7" type="StaticBody3D" parent="Solids"]
transform = Transform3D(1, 0, 0, 0, 2.04164, 0, 0, 0, 1, -0.505735, 2.24749, 16.5313)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Solids/Wall7"]
mesh = SubResource("BoxMesh_cg1rl")
surface_material_override/0 = SubResource("StandardMaterial3D_gbnl2")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Solids/Wall7"]
shape = SubResource("BoxShape3D_u3515")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.772689, -0.45069, 0.447023, 0, 0.704213, 0.709989, -0.634784, -0.548601, 0.544138, 0, 11.2156, 8.85541)
shadow_enabled = true

[node name="SpawnLocation" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35129, 0)

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="SpawnLocation"]
_spawnable_scenes = PackedStringArray("res://Scenes/player.tscn")
spawn_path = NodePath("../..")

[node name="Menu" type="CanvasLayer" parent="."]

[node name="HostJoinMenu" type="CanvasLayer" parent="Menu"]

[node name="Host" type="Button" parent="Menu/HostJoinMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_top = 120.0
offset_right = -327.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
disabled = true
text = "HOST GAME"

[node name="Join" type="Button" parent="Menu/HostJoinMenu"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -296.0
offset_top = 120.0
offset_right = -23.0
offset_bottom = 192.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 46
disabled = true
text = "JOIN GAME"

[node name="LineEdit" type="LineEdit" parent="Menu/HostJoinMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -504.0
offset_top = 64.0
offset_right = -259.0
offset_bottom = 95.0
grow_horizontal = 2
placeholder_text = "Must be 3 to 20 characters..."

[node name="Label" type="Label" parent="Menu/HostJoinMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_top = 64.0
offset_right = -511.0
offset_bottom = 96.0
grow_horizontal = 2
text = "Username: "
vertical_alignment = 1

[node name="LineEdit2" type="LineEdit" parent="Menu/HostJoinMenu"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -568.0
offset_top = 8.0
offset_right = -323.0
offset_bottom = 39.0
grow_horizontal = 2
text = "127.0.0.1"
placeholder_text = "127.0.0.1"

[node name="Label2" type="Label" parent="Menu/HostJoinMenu"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -600.0
offset_top = 8.0
offset_right = -574.0
offset_bottom = 40.0
grow_horizontal = 2
text = "IP: "
vertical_alignment = 1

[node name="Label3" type="Label" parent="Menu/HostJoinMenu"]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -312.0
offset_top = 8.0
offset_right = -234.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Port: 1080"
vertical_alignment = 1

[node name="ServerBrowser" type="Control" parent="Menu/HostJoinMenu"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("3_s1qlv")
serverInfo = ExtResource("4_hhcdl")

[node name="Title" type="Label" parent="Menu/HostJoinMenu/ServerBrowser"]
layout_mode = 2
offset_left = 40.0
offset_top = 238.0
offset_right = 208.0
offset_bottom = 265.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 17
text = "Server browser"

[node name="BroadcastTimer" type="Timer" parent="Menu/HostJoinMenu/ServerBrowser"]

[node name="Label4" type="Label" parent="Menu/HostJoinMenu/ServerBrowser"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 940.0
offset_top = 8.0
offset_right = 1249.0
offset_bottom = 40.0
grow_horizontal = 2
text = "Bound to listen port: ..."
horizontal_alignment = 2
vertical_alignment = 1

[node name="Panel" type="Panel" parent="Menu/HostJoinMenu/ServerBrowser"]
layout_mode = 0
offset_left = 40.0
offset_top = 264.0
offset_right = 760.0
offset_bottom = 672.0

[node name="ServerInformationTitles" type="HBoxContainer" parent="Menu/HostJoinMenu/ServerBrowser/Panel"]
layout_mode = 2
offset_right = 720.0
offset_bottom = 56.0

[node name="Name" type="Label" parent="Menu/HostJoinMenu/ServerBrowser/Panel/ServerInformationTitles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "NAME"

[node name="IP" type="Label" parent="Menu/HostJoinMenu/ServerBrowser/Panel/ServerInformationTitles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "IP"

[node name="PlayerCount" type="Label" parent="Menu/HostJoinMenu/ServerBrowser/Panel/ServerInformationTitles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21
text = "PLAYER COUNT"

[node name="PlayerCount2" type="Label" parent="Menu/HostJoinMenu/ServerBrowser/Panel/ServerInformationTitles"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 21

[node name="ScrollContainer" type="ScrollContainer" parent="Menu/HostJoinMenu/ServerBrowser/Panel"]
layout_mode = 2
offset_top = 56.0
offset_right = 720.0
offset_bottom = 408.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/HostJoinMenu/ServerBrowser/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MenuMenu" type="CanvasLayer" parent="Menu"]
visible = false

[node name="Label" type="Label" parent="Menu/MenuMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.5
offset_top = 63.0
offset_right = 177.5
offset_bottom = 136.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 51
text = "PAUSED GAME"

[node name="Label2" type="Label" parent="Menu/MenuMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -177.0
offset_top = 237.0
offset_right = 178.0
offset_bottom = 310.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "SENSITIVITY"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckBox" type="CheckBox" parent="Menu/MenuMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.0
offset_top = 176.0
offset_right = 12.0
offset_bottom = 200.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "FULLSCREEN"

[node name="HSlider" type="HSlider" parent="Menu/MenuMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -128.5
offset_top = 288.0
offset_right = 128.5
offset_bottom = 304.0
grow_horizontal = 2
max_value = 10.0
step = 0.1
value = 1.0

[node name="Exit" type="Button" parent="Menu/MenuMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -31.0
offset_top = 351.0
offset_right = 31.0
offset_bottom = 395.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 26
text = "EXIT"

[connection signal="pressed" from="Menu/HostJoinMenu/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Menu/HostJoinMenu/Join" to="." method="_on_join_pressed"]
[connection signal="timeout" from="Menu/HostJoinMenu/ServerBrowser/BroadcastTimer" to="Menu/HostJoinMenu/ServerBrowser" method="_on_broadcast_timer_timeout"]
[connection signal="toggled" from="Menu/MenuMenu/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="Menu/MenuMenu/Exit" to="." method="_on_exit_pressed"]
